               some fitting failed and if start parameters are not set
               sufficiently,

             • add argument ‘txtProgressBar’ and ‘verbose’ to provide
               more output options (this is helpful when writing
               tutorials),

             • new fit options added ‘QDR’ (polynominal function) to
               account for superlinear signal grow.

         • ‘plot_RLum()’

             • The ‘...’ argument ‘main’ can be now be of type ‘list’
               if a ‘list’ of objects is provided. This allows to set
               different plot titles for this specific plot option.

         • ‘plot_RLum.Analysis()’

             • The ‘...’ argument ‘main’ can now be provided as vector
               if ‘combine = TRUE’,

             • this methods now supports a vector for the argument
               ‘main’.

         • ‘readBIN2R()’

             • Set function on deprecated, new name: ‘read_BIN2R()’,

             • new argument ‘position’ implemented that allows to limit
               the import to specific positions (this will have,
               however, no positive effect on the import performance),

             • add argument ‘...’ to let arguments pass to the function
               ‘Risoe.BINfileData2RLum.Analysis’, this case the
               argument ‘fastForward’ will forced to ‘TRUE’,

             • argument ‘file’ now supports a ‘list’ of file names or
               just a path, in this case the funtions tries to detect
               and import all possible BIN/BINX files found in this
               path.

         • ‘readSPE2R()’

             • Set function on deprecated, new name: ‘read_SPE2R()’.

         • ‘readXSYG2R()’

             • Set function to deprecated, new name: ‘read_XSYG2R()’,

             • the argument ‘file’ can now handle a ‘list’ of files,
               along with this just a path to directory is allowed
               instead a path to a file.  In this case the function