@@ -141,7 +141,7 @@
 </td>
 <td class=cellinside>2015-10-17
 </td>
-<td class=cellinside>14:22:41
+<td class=cellinside>14:30:28
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -832,9 +832,9 @@
 </td>
 <td class=cellinside>0.1.1
 </td>
-<td class=cellinside>2015-10-16
+<td class=cellinside>2015-10-17
 </td>
-<td class=cellinside>18:19:24
+<td class=cellinside>14:30:46
 
 </td>
 <td class=cellinside><br /> Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -1060,9 +1060,9 @@
 </td>
 <td class=cellinside>1.8.0
 </td>
-<td class=cellinside>2015-10-17
+<td class=cellinside>2015-10-19
 </td>
-<td class=cellinside>14:24:54
+<td class=cellinside>14:26:42
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -1361,11 +1361,11 @@
 </td>
 <td class=cellinside><br /> Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.<br />
 </td>
-<td class=cellinside>0.5.1
+<td class=cellinside>0.5.2
 </td>
-<td class=cellinside>2015-10-17
+<td class=cellinside>2015-10-18
 </td>
-<td class=cellinside>02:34:48
+<td class=cellinside>22:29:33
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
