@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Sat Oct 17 14:27:06 2015
+% Mon Oct 19 14:30:33 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -14,7 +14,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   4 & Analyse\_SAR.OSLdata & Analyse SAR CW-OSL measurements. & $<$br /$>$ The function analyses SAR CW-OSL curve data and provides a summary of the$<$br /$>$ measured data for every position. The output of the function is optimised$<$br /$>$ for SAR OSL measurements on quartz.$<$br /$>$ & 0.2.16 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg$<$br /$>$ (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  5 & analyse\_SAR.TL & Analyse SAR TL measurements & $<$br /$>$ The function performs a SAR TL analysis on a$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.1.4 & 2015-10-17 & 14:22:41
+  5 & analyse\_SAR.TL & Analyse SAR TL measurements & $<$br /$>$ The function performs a SAR TL analysis on a$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.1.4 & 2015-10-17 & 14:30:28
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   6 & apply\_CosmicRayRemoval & Function to remove cosmic rays from an RLum.Data.Spectrum S4 class object & $<$br /$>$ The function provides several methods for cosmic ray removal and spectrum$<$br /$>$ smoothing for an RLum.Data.Spectrum S4 class object$<$br /$>$ & 0.1.3 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -78,7 +78,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   41 & get\_Layout & Collection of layout definitions & $<$br /$>$ This helper function returns a list with layout definitions for homogeneous$<$br /$>$ plotting.$<$br /$>$ & 0.1 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  42 & get\_Quote & Function to return essential quotes & $<$br /$>$ This function returns one of the collected essential quotes in the$<$br /$>$ growing library. If called without any parameters, a random quote is$<$br /$>$ returned.$<$br /$>$ & 0.1.1 & 2015-10-16 & 18:19:24
+  42 & get\_Quote & Function to return essential quotes & $<$br /$>$ This function returns one of the collected essential quotes in the$<$br /$>$ growing library. If called without any parameters, a random quote is$<$br /$>$ returned.$<$br /$>$ & 0.1.1 & 2015-10-17 & 14:30:46
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   43 & get\_rightAnswer & Function to get the right answer & $<$br /$>$ This function returns just the right answer$<$br /$>$ & 0.1.0 & 2015-09-24 & 16:32:32
  & $<$br /$>$ inspired by R.G.$<$br /$>$  R Luminescence Package Team \\ 
@@ -102,7 +102,7 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
   53 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  54 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.0 & 2015-10-17 & 14:24:54
+  54 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.0 & 2015-10-19 & 14:26:42
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   55 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -133,7 +133,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)  Based on suggestion by Willian Amidon and Andrew Louis Gorin.$<$br /$>$  R Luminescence Package Team \\ 
   69 & read\_SPE2R & Import Princeton Intruments (TM) SPE-file into R & $<$br /$>$ Function imports Princeton Instruments (TM) SPE-files into R environment and$<$br /$>$ provides  RLum  objects as output.$<$br /$>$ & 0.1.0 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  70 & read\_XSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.5.1 & 2015-10-17 & 02:34:48
+  70 & read\_XSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.5.2 & 2015-10-18 & 22:29:33
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   71 & Risoe.BINfileData-class & Class  "Risoe.BINfileData" & $<$br /$>$ S4 class object for luminescence data in R. The object is produced as output$<$br /$>$ of the function  read\_BIN2R .$<$br /$>$ & 0.2.0
  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
