@@ -73,7 +73,7 @@ background see Aitken and Smith (1988)\cr
 from the input object without further warning.
 }
 \section{Function version}{
- 0.1.4 (2015-10-17 14:22:41)
+ 0.1.4 (2015-10-17 14:30:28)
 }
 \examples{
 ##load data
