@@ -22,7 +22,7 @@ growing library. If called without any parameters, a random quote is
 returned.
 }
 \section{Function version}{
- 0.1.1 (2015-10-16 18:19:24)
+ 0.1.1 (2015-10-17 14:30:46)
 }
 \examples{
 ## ask for an arbitrary qoute
